bug 5150: paup: It appears to randomly root trees
Fix nexus exporter/importer putting/expecting the [&U] unrootedness metacomment in the wrong place. This commit is only partially tested and I'm committing it early so Steve can look at it while I continue testing.

Steve to review

git-svn-id: http://svn.code.sf.net/p/jebl/code/trunk@905 6721810a-1124-0410-938e-bb277542c816